MEM-182: Add logic and UI for importing Organizations into EPIC.

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -49,10 +49,11 @@
 							<option ng-if="environment === 'MEM'" value="/api/projects/import/mem" label="MEM Projects">MEM Projects</option>
 							<option ng-if="environment === 'EAO'" value="/api/projects/import/eao" label="EAO Projects">EAO Projects</option>
 							<option ng-if="environment === 'EAO'" value="/api/users/import" label="EAO Contacts">EAO Contacts</option>
+							<option ng-if="environment === 'EAO'" value="/api/org/import" label="EAO Organizations">EAO Organizations</option>
 							<option ng-if="environment === 'EAO'" value="/api/groupusers/import" label="EAO Group Contacts">EAO Group Contacts</option>
 							<option ng-if="environment === 'EAO'" value="/api/documents/import" label="EAO Documents">EAO Documents</option>
-              <option ng-if="environment === 'EAO'" value="/api/userroles/project/import" label="EAO User Roles (Project)">EAO User Roles (Project)</option>
-              <option ng-if="environment === 'EAO'" value="/api/userroles/system/import" label="EAO User Roles (System)">EAO User Roles (System)</option>
+							<option ng-if="environment === 'EAO'" value="/api/userroles/project/import" label="EAO User Roles (Project)">EAO User Roles (Project)</option>
+              				<option ng-if="environment === 'EAO'" value="/api/userroles/system/import" label="EAO User Roles (System)">EAO User Roles (System)</option>
 						</select>
 					</td>
 
