ESM-681: remove document browser from project details screen. Yay.

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -115,7 +115,11 @@
 		</tmpl-project-activities>
 		-->
 
+		<!-- replaced this document browser with a nice shiny new documents manager.
+		 	Rumon Carter's request - remove from the details screen and only accessible from Documents menu.
+
 		<tmpl-documents-browser class="anchor-section" id="anchor-documents" x-project="project" x-approvals="false"></tmpl-documents-browser>
+		-->
 
 		<!-- PROJECT MAP -->
 		<section class="project-map">
