--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -86,6 +86,9 @@ $list-selected-border: 1px solid #4187c9;
 
 /* NAME-VALUE PAIR */
 .nv-pair {
+    margin: 0;
+    padding: 0;
+
     li {
         @include flexbox();
         @include flexdirection(row);
