--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -78,6 +78,13 @@
 							x-confirm-items="documentMgr.publishSelected.confirmItems"
 							x-on-ok="documentMgr.publishSelected.unpublish"><span class="glyphicon glyphicon-ban-circle"></span> Unpublish</a>
 					</li>
+					<li>
+						<a title="Move Folders & Files"
+							x-document-mgr-move
+							x-title-text="'Unpublish File(s)'"
+							x-ok-text="documentMgr.publishSelected.okText"
+							x-cancel-text="documentMgr.publishSelected.cancelText"><span class="glyphicon glyphicon-transfer"></span> Move to...</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -258,7 +265,7 @@
 														x-title-text="'Delete File(s)'"
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
-														x-confirm-text="'Are you sure you want to delete this file? This action cannot be undone'"
+														x-confirm-text="'Are you sure you want to delete this file? This action cannot be undone.'"
 														x-confirm-items="[doc.documentFileName]"
 														x-on-ok="documentMgr.deleteFile"
 														x-ok-args="doc">
