--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -119,7 +119,7 @@ $list-selected-border: 1px solid #4187c9;
 .fb-header {
     @include flexbox();
     @include flex(0 0 auto);
-    padding: 0.7rem 1rem;
+    padding: 0.7rem 0.5rem;
     background: $file-browser-bg;
     border-bottom: $file-browser-border;
 
@@ -134,6 +134,15 @@ $list-selected-border: 1px solid #4187c9;
             height: 3.4rem;
             padding: 0.7rem;
             font-weight: normal;
+
+            /* Fix this in core.scss */
+            span + span {
+                margin-left: 0;
+            }
+        }
+
+        .back-icon {
+            display: none;
         }
 
         li {
@@ -153,6 +162,7 @@ $list-selected-border: 1px solid #4187c9;
 
         li:last-child {
             .btn {
+                
                 font-weight: bold;
                 color: $file-browser-breadcrumb-active-color;
 
@@ -192,7 +202,32 @@ $list-selected-border: 1px solid #4187c9;
                 display: inline-block;
             }
 
+            li:last-child {
+                .btn {
+                    &:active,
+                    &:hover,
+                    &:focus {
+                        border: 1px solid transparent;
+                    }
+                }
+            }
+
             li:nth-last-child(2) {
+                position: absolute;
+
+                .icon-btn {
+                    min-width: 3rem;
+
+                    .root-icon {
+                        display: none;
+                    }
+
+                    .back-icon {
+                        margin: 0;
+                        display: block;
+                    }
+                }
+
                 + li {
                     position: absolute;
                     right: 0;
@@ -203,30 +238,6 @@ $list-selected-border: 1px solid #4187c9;
                         overflow: hidden;
                         text-overflow: ellipsis;
                         text-align: left;
-                    }
-                }
-            }
-
-            li:nth-last-child(2) {
-                position: absolute;
-
-                :before {
-                    position: absolute;
-                    top: 0;
-                    left: -1px;
-                    width: 100%;
-                    height: 3.4rem;
-                    display: inline-block;
-                    line-height: 3.4rem;
-                    font-size: 5rem;
-                    content: '‹'; 
-                }
-
-                .icon-btn {
-                    min-width: 3rem;
-
-                    span {
-                        display: none;
                     }
                 }
             }
@@ -465,6 +476,10 @@ $list-selected-border: 1px solid #4187c9;
                     color: #494949;
                 }
             }
+
+            .drill-in-btn {
+                display: none;
+            }
         }
     }
 
@@ -518,8 +533,11 @@ $list-selected-border: 1px solid #4187c9;
     .fb-list {
         .fb-col-group {
             .row-actions {
-                display: block;
                 right: 1rem;
+
+                .drill-in-btn {
+                    display: inline-block;
+                }
             }
         }
     }
