ESM-682 - Document UI - Download file
- Fixed an issued with rendering an anchor inside of the row actions

--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -336,6 +336,14 @@ $list-selected-border: 1px solid #4187c9;
 
             .row-actions {
                 display: block;
+
+                a {
+                    display: inline-block;
+
+                    .glyphicon {
+                        top: 0.55rem;
+                    }
+                }
             }
         }
     }
